Choose a side works

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/ls-back.jpg
+    - assets/images/ds-back.jpg
     - data/cards/Light.json
     - data/cards/Dark.json
     # - data/decklists/2020_worlds_day1/
     # - data/decklists/2020_worlds_day2/
     - data/decklists/2020_worlds_day3/
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
