--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_tindercard: ^0.1.7
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
