--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.swccg_builder">
+    package="com.example.quickdraw">
    <application
-        android:label="swccg_builder"
+        android:label="quickdraw"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
