--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "swccg_builder",
-    "short_name": "swccg_builder",
+    "name": "quickdraw",
+    "short_name": "quickdraw",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
