--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_tindercard: ^0.1.7
+  intl: ">=0.14.0"
   provider: ^4.3.3
+  flutter_tindercard: ^0.1.7
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
