--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_tindercard: ^0.1.7
   carousel_slider: ^3.0.0
   titled_navigation_bar: ^5.0.0-nullsafety.0
+  flutter_slidable: ^0.5.4
 
 
 dev_dependencies:
