--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,15 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ">=0.14.0"
+  collection: ^1.14.13
   provider: ^4.3.3
   flutter_tindercard: ^0.1.7
   carousel_slider: ^3.0.0
   titled_navigation_bar: ^5.0.0-nullsafety.0
   flutter_slidable: ^0.5.4
-  sticky_headers: "^0.1.8"
+  sticky_headers: ^0.2.0
+  grouped_list: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
